<resources>
    <string name="app_name">Exchange Rate Converter</string>

    <string name="input_value_hint"><font size="16">Enter value here</font></string>

    <!--DUMMY UI STRINGS-->
    <string name="country_code">USD</string>
    <string name="country_name">American Dollars</string>
    <string name="country2_code">JPY</string>
    <string name="country2_name">Japanese Yen</string>
    <string name="exchange_rate_small">0.00</string>
    <string name="exchange_rate_medium">1,000.00</string>
    <string name="exchange_rate_large">1,000,000,000.00</string>
    <string name="exchange_rate_very_large">1,000,000,000,000,000.00</string>

    <!--Content Descriptions-->
    <string name="content_description_flag_icon">Flag Icon</string>
    <string name="content_description_chevron">Chevron</string>
    <string name="menu_item_title_refresh">Refresh</string>
    <string name="menu_item_title_search">Search</string>

</resources>