<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500">

    <LinearLayout
        android:id="@+id/top_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/country_code_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_weight="1.5"
            android:background="?attr/selectableItemBackground"
            android:gravity="end"
            android:text="@string/country_code"
            android:textColor="@color/white"
            android:textSize="@dimen/country_code_text_size"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24" />

        <EditText
            android:id="@+id/input_currency_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.5"
            android:background="@android:color/transparent"
            android:hint="@string/input_value_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="@color/semi_transparent_white"
            android:textSize="@dimen/user_input_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/flag_icon"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_flag_icon"
            android:scaleType="centerInside"
            android:src="@drawable/_usd" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top_corners_bg"
        app:layout_constraintTop_toBottomOf="@+id/top_linear_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exchange_rates_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="?attr/actionBarSize"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_linear_layout"
        app:spanCount="2"
        tools:listitem="@layout/item_exchange_rate" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>